--- a/studio_ghibli_store/test/fixtures/products.yml
+++ b/studio_ghibli_store/test/fixtures/products.yml
@@ -1,11 +1,19 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-# This model initially had no columns defined. If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-# column: value
+one:
+  title: MyString
+  description: MyText
+  colour: MyString
+  cost_price: 9.99
+  image_url: MyString
+  catalog_categories_id: 1
+  supplier_id: 1
+
+two:
+  title: MyString
+  description: MyText
+  colour: MyString
+  cost_price: 9.99
+  image_url: MyString
+  catalog_categories_id: 1
+  supplier_id: 1
